fix: Adjust button spacing and update padding in MainHero styles

--- a/src/components/MainHero/index.module.scss
+++ b/src/components/MainHero/index.module.scss
@@ -22,7 +22,7 @@
   min-height: 85vh;
   overflow: hidden;
 
-  & > * {
+  &>* {
     position: relative;
     z-index: 10;
   }
@@ -85,7 +85,7 @@
 
 .heroContentSection {
   @media (max-width: 1500px) {
-    padding: 30px;
+    padding: 10px;
   }
 }
 
